<resources>
    <string name="app_name">Say Cheese</string>
    <string name="action_settings">Settings</string>

    <string name="subscription_key">944bc4ff2bb64faf8ea59b6eb5acacc6</string>

    <!-- fragment cardview-->
    <string name="title_activity_card_view">CardViewActivity</string>
    <string name="cardview_contents">This is a CardView widget. CardView widgets can have
        shadows and rounded corners.
        \n\nTo create a card with a shadow, use the <font fgcolor="#FFFFFFFF">android:elevation</font>
        attribute.
        \n\nTo set the corner radius in your layouts, use the <font
            fgcolor="#FFFFFFFF">card_view:cardCornerRadius</font> attribute.
    </string>
    <string name="cardview_radius_seekbar_text">Radius</string>
    <string name="cardview_elevation_seekbar_text">Elevation</string>

    <!-- Common in all activities -->
    <string name="progress_dialog_title">Please wait</string>
    <string name="view_log">View Result</string>


    <!-- Detection activity -->
    <string name="image">Image:</string>
    <string name="select_image">Select\nImage</string>
    <string name="result">Result:</string>
    <string name="detect">Detect</string>


    <!-- Select image activity -->
    <string name="select_an_image">Select an Image</string>
    <string name="take_photo">Take a Photo</string>
    <string name="select_image_in_album">From Gallery</string>


    <!-- Main activity -->
    <string name="detection">Detection</string>
    <string name="verification">Verification</string>
    <string name="identification">Identification</string>
    <string name="grouping">Grouping</string>
    <string name="find_similar_faces">Find Similar Faces</string>
    <string name="detection_description">Detect faces, face landmarks, pose, gender, and age.</string>
    <string name="verification_description">Check if two faces belong to the same person.</string>
    <string name="grouping_description">Group faces based on similarity.</string>
    <string name="find_similar_face_description">Search for similar-looking faces.</string>
    <string name="identification_description">Identify the person from a face.</string>

    <!-- Logs -->
    <string name="log">Log:</string>
    <string name="detection_log">Detection Log</string>
    <string name="verification_log">Verification Log</string>
    <string name="find_similar_face_log">Find Similar Face Log</string>
    <string name="grouping_log">Grouping Log</string>
    <string name="identification_log">Identification Log</string>
</resources>
