<!-- Copyright (c) Microsoft. All rights reserved. -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.android.saycheese.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/info"
        android:layout_marginBottom="@dimen/view_margin"
        android:baselineAligned="false"
        android:orientation="vertical" >


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/image" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/view_margin">

            <Button
                android:id="@+id/select_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentTop="true"
                android:text="@string/select_image"
                android:onClick="selectImage"
                style="@style/ButtonStyle" />


            <ImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#E0E0E0"
                android:contentDescription="@string/detection" />

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/button_bar"
        android:layout_gravity="center" />


    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

    <Button
        android:id="@+id/detect"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginRight="@dimen/view_margin"
        android:layout_marginEnd="@dimen/view_margin"
        android:text="@string/detect"
        android:onClick="detect"
        style="@style/ButtonStyle" />

    <Button
        android:id="@+id/view_log"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/view_log"
        android:background="@drawable/button_background"
        android:onClick="viewLog"
        style="@style/ButtonStyle" />
    </LinearLayout>

</RelativeLayout>
